Schatten konnte auch gemini nicht richtig setzen. Hier Versuch mit grok.

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      /* Cube-Außenschatten (Photoshop: Links & Oben) */
+      /* Cube-Außenschatten (Photoshop: Rechts & Unten) */
       --cubeShadow1: rgba(0,0,0,0.45);
       --cubeShadow2: rgba(0,0,0,0.25);
-      --cubeShadowX: -18px;  /* Nach links außen */
-      --cubeShadowY: -18px;  /* Nach oben außen */
+      --cubeShadowX: 18px;  /* Nach rechts außen */
+      --cubeShadowY: 18px;  /* Nach unten außen */
       --cubeShadowBlur1: 28px;
       --cubeShadowBlur2: 12px;
     }
